src/style.css
@font-face {
  font-family: 'Roboto';
  src: url('./static/roboto.woff2') format('woff2');
}

* {
  margin: 0;
  padding: 0;
}

.section {
  word-wrap:break-word;
}

.section:nth-child(even) {
}

#main-container {
  min-width: 800px;
}

.message-container {}

.message-title {
  font-size: 1em;
  padding: 1em;
  background: rgba(3, 169, 244, 255);
  color: #fff;
  font-family: 'Roboto', sans-serif;
}

.message-body {
  padding: 1em;
  background: #f8f8f8;
  border: 1px solid #ccc;
  border-radius: 0 0 .5em .5em;
  font-family: monospace;
  line-height: 1.5;
}

.message-parameter {
  padding: 1em;
}

.message-parameters span {
  font-weight: bold;
  font-family: 'Roboto', sans-serif;
  position: relative;
  top: .5em;
  background: #fff;
  padding: .5em 1em;
  display: inline;
}

.message-parameters textarea {
  width: 95%;
  max-height: 2em;
  padding: 1em;
  resize: none;
  border-style: dotted;
  font-family: 'Roboto', sans-serif;
  border: none;
  border-top: 1px dotted;
}

.nav-prev, .nav-next {
  background: rgba(3, 169, 244, 255);
  width: 1em;
  height: 1em;
  display: none;
  position: absolute;
  top: 50%;
  padding: 1em;
  font-size: 2em;
  color: #fff;
  left: .3em;
  font-family: monospace;
  line-height: 1;
}

.nav-next {
  right: .3em;
  left: initial;
  padding-left: 1.2em;
  padding-right: .8em;
}

code {
  white-space: pre-wrap;
}

.fp-controlArrow {
  border-color: transparent red transparent red !important;
  display: none;
}

#no-messages {
  color: #666;
  text-align: center;
  font-size: 2em;
  font-family: 'Roboto', sans-serif;
}

#no-messages p {
  margin: 1em;
}

.message-copy-toolbar {
    position: absolute;
    right: 1em;
    top: .3em;
}

button.copy-messages-button, button.clear-copy-selections {
    background: #03a9f4;
    border: none;
    color: #fff;
    padding: 1em;
    cursor: pointer;
    text-decoration: underline;
    font-family: 'Roboto', sans-serif;
    font-size: 0.8em;
}

button.copy-messages-button:hover, button.clear-copy-selections:hover {
    background: #56beec;
}

.message-copy-checkbox-container {
  width: 20px;
  position: relative;
  display: inline;
  padding: 0.2em;
  padding-right: 1em;
}

.message-copy-checkbox-container label {
  width: 20px;
  height: 20px;
  cursor: pointer;
  position: absolute;
  top: 0;
  left: 0;
  border-radius: 4px;
  box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.5), 0px 1px 0px rgba(255, 255, 255, 0.4);
  background: #0090d2;
}

.message-copy-checkbox-container label:after {
  content: '';
  width: 9px;
  height: 5px;
  position: absolute;
  top: 4px;
  left: 4px;
  border: 3px solid #fcfff4;
  border-top: none;
  border-right: none;
  background: transparent;
  opacity: 0;
  -webkit-transform: rotate(-45deg);
          transform: rotate(-45deg);
}

.message-copy-checkbox-container input[type=checkbox] {
  visibility: hidden;
}
.message-copy-checkbox-container input[type=checkbox]:checked + label:after {
  opacity: 1;
}

